--- a/src/components/ButtonBack/ButtonBack.module.css
+++ b/src/components/ButtonBack/ButtonBack.module.css
@@ -3,18 +3,17 @@
     justify-content: center;
     align-items: center;
     border-radius: 10px;
-    border: 1px solid gold;
+    border: 1px solid var(--border-color);
     width: 200px;
     height: 50px;
-    background: #232526;
-    background: -webkit-linear-gradient(to right, #414345, #232526);
-    background: linear-gradient(to right, #414345, #232526);
+    background: var(--background-header);
     color: rgb(144, 140, 140);
     -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
     -ms-border-radius: 10px;
     -o-border-radius: 10px;
-    margin-bottom: 50px;
+    margin-left: auto;
+    margin-right: auto;
     transition: color 0.4s;
     -webkit-transition: color 0.4s;
     -moz-transition: color 0.4s;
