--- a/src/components/GanreList/GanreList.module.css
+++ b/src/components/GanreList/GanreList.module.css
@@ -12,18 +12,32 @@
     justify-content: center;
     align-items: center;
     width: 150px;
-    background: #232526;
-    background: -webkit-linear-gradient(to right, #414345, #232526);
-    background: linear-gradient(to right, #414345, #232526);
+    background: var(--background-movies-item);
     padding: 10px;
     border-radius: 5px;
-    border: 1px solid gold;
+    border: 1px solid var(--border-color);
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
     -ms-border-radius: 5px;
     -o-border-radius: 5px;
-    color: aqua;
+    color: var(--color);
     font-weight: bold;
     font-size: 12px;
     text-transform: uppercase;
+}
+
+.ganreListItem p {
+    transition: var(--transition);
+    -webkit-transition: var(--transition);
+    -moz-transition: var(--transition);
+    -ms-transition: var(--transition);
+    -o-transition: var(--transition);
+}
+
+.ganreListItem:hover p {
+    transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    -o-transform: scale(1.1);
 }
