--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,7 +1,5 @@
 .header {
-    background: #232526;
-    background: -webkit-linear-gradient(to right, #414345, #232526);
-    background: linear-gradient(to right, #414345, #232526);
+    background: var(--background-header);
     padding-top: 20px;
     padding-bottom: 20px;
     position: fixed;
@@ -23,18 +21,18 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    color: #fff;
+    color: var(--color);
     font-size: 1.5rem;
     margin-top: 10px;
     position: relative;
 }
 
 .logo span {
-    color: aqua;
+    color: var(--color);
 }
 
 .reactLogo {
-    color: aqua;
+    color: var(--color);
     margin-right: 5px;
     animation: rotate 5s infinite linear;
     -webkit-animation: rotate 5s infinite linear;
