--- a/src/components/MainForm/MainForm.module.css
+++ b/src/components/MainForm/MainForm.module.css
@@ -7,10 +7,8 @@
     margin-left: auto;
     margin-right: auto;
     padding: 20px;
-    background: #232526;
-    background: -webkit-linear-gradient(to right, #414345, #232526);
-    background: linear-gradient(to right, #414345, #232526);
-    border: 1px solid gold;
+    background: var(--background-header);
+    border: 1px solid var(--border-color);
     gap: 20px;
     border-radius: 5px;
     -webkit-border-radius: 5px;
@@ -38,7 +36,7 @@
     height: 30px;
     padding: 5px;
     background-color: transparent;
-    border: 1px solid gold;
+    border: 1px solid var(--border-color);
     border-radius: 5px;
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
@@ -69,7 +67,7 @@
     height: 30px;
     padding: 5px;
     background-color: transparent;
-    border: 1px solid gold;
+    border: 1px solid var(--border-color);
     border-radius: 5px;
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
