--- a/src/components/SearchByYear/SearchByYear.module.css
+++ b/src/components/SearchByYear/SearchByYear.module.css
@@ -2,7 +2,8 @@
 .selectedYear {
     position: relative;
     display: inline-block;
-    width: 100%;
+    width: 300px;
+    background-color: transparent;
 }
 
 .selectLabel {
@@ -15,19 +16,6 @@
 .searchText {
     margin-top: 5px;
     color: #101010;
-}
-
-.selectYear {
-    width: 100%;
-    height: 40px;
-    padding: 10px;
-    font-size: 16px;
-    border-radius: 10px;
-    border: none;
-    background-color: #2c2c2c;
-    color: #fff;
-    cursor: pointer;
-    appearance: none;
 }
 
 .selectYear::-ms-expand {
@@ -62,8 +50,6 @@ select:focus {
     top: 50%;
     right: 4%;
     z-index: 10;
-}
-
-.css-b62m3t-container {
-    background-color: red;
+    opacity: 0;
+    pointer-events: none;
 }
