--- a/src/components/Searchbar/Searchbar.module.css
+++ b/src/components/Searchbar/Searchbar.module.css
@@ -12,7 +12,7 @@
     height: 50px;
     margin-right: 10px;
     background-color: transparent;
-    border: 1px solid orange;
+    border: 1px solid var(--border-color);
     outline: none;
     border-radius: 5px;
     -webkit-border-radius: 5px;
@@ -34,8 +34,8 @@
 .serchBtn {
     width: 100px;
     height: 50px;
-    background-color: orange;
-    border: 1px solid orange;
+    background-color: gold;
+    border: var(--border-color);
     color: gray;
     border-radius: 5px;
     -webkit-border-radius: 5px;
