--- a/src/pages/MovieDetalisPage/MovieDetalis.module.css
+++ b/src/pages/MovieDetalisPage/MovieDetalis.module.css
@@ -4,14 +4,14 @@
 
 .posterMovie {
     position: absolute;
-    width: 90%;
+    width: 100%;
     height: auto;
-    top: 0;
-    left: 50%;
+    top: -1%;
+    right: -51%;
     z-index: -1;
     transform: translate(-50%, 0);
-    opacity: 0.2;
-    border: 10px solid orange;
+    opacity: 0.1;
+    border: 10px solid var(--color);
     border-radius: 10px;
     -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
@@ -26,12 +26,13 @@
 .detalisWrapper {
     display: flex;
     justify-content: center;
-    align-items: center;
+    /* align-items: center; */
     flex-wrap: wrap;
 }
 
 .columnInfo {
-    padding: 30px;
+    max-width: 50%;
+    padding: 10px;
 }
 
 .btnBackDetalisWrapper {
@@ -47,9 +48,11 @@
 }
 
 .infoTitle {
+    max-width: 700px;
     font-size: 70px;
-    color: rgb(182, 174, 174);
-    margin-bottom: 50px;
+    color: var(--color);
+    text-shadow: 0 0 1px black;
+    margin-bottom: 10px;
 }
 
 .scoreDetalis {
@@ -60,14 +63,14 @@
 
 .overviewTitle {
     font-size: 40px;
-    color: rgb(182, 174, 174);
+    color: var(--color);
     margin-bottom: 10px;
 }
 
 .overview {
     max-width: 600px;
     font-size: 20px;
-    color: rgb(182, 174, 174);
+    color: var(--color);
     margin-bottom: 10px;
 }
 
@@ -80,8 +83,8 @@
 .columnImg {
     position: relative;
     cursor: pointer;
-    max-width: 400px;
-    margin-right: 30px;
+    max-width: 50%;
+    padding: 10px;
     border-radius: 10px;
     -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
@@ -133,7 +136,7 @@
 }
 
 .detalisImg {
-    width: 100%;
+    width: 300px;
     height: 100%;
     object-fit: cover;
     transition: all 0.4s;
@@ -142,6 +145,7 @@
     -ms-transition: all 0.4s;
     -o-transition: all 0.4s;
     overflow: hidden;
+    border-radius: 10px;
 }
 
 .columnImg:hover .detalisImg {
@@ -154,9 +158,9 @@
 
 .reviewList {
     display: flex;
-    justify-content: center;
-    column-gap: 10px;
-    margin-bottom: 40px;
+    align-items: center;
+    column-gap: 50px;
+    margin-bottom: 20px;
     margin-top: 20px;
 }
 
@@ -216,4 +220,24 @@ iframe {
     top: 1%;
     left: 1%;
     cursor: pointer;
+}
+
+.addMoviesBtn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-transform: uppercase;
+    width: 100%;
+    height: 30px;
+    color: var(--color);
+    font-size: 14px;
+    font-weight: bold;
+    cursor: pointer;
+    background: var(--background-header);
+    border: 1px solid var(--border-color);
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
 }
