update styles update functional btn load more update break points swipper

--- a/src/components/MoviesBar/MoviesBar.module.css
+++ b/src/components/MoviesBar/MoviesBar.module.css
@@ -10,7 +10,7 @@
 }
 
 .movieBarListItem a {
-    color: rgb(162, 158, 158);
+    color: var(--color);
     font-size: 16px;
     text-decoration: underline;
 }
