--- a/src/components/SearchByYear/SearchByYear.module.css
+++ b/src/components/SearchByYear/SearchByYear.module.css
@@ -1,55 +1,37 @@
-/* Movie theater select style */
 .selectedYear {
-    position: relative;
-    display: inline-block;
-    width: 300px;
-    background-color: transparent;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.selectWrapper {
+    width: 200px;
+
 }
 
 .selectLabel {
     display: block;
     margin-bottom: 5px;
-    font-weight: bold;
-    color: #101010;
+    font-size: 1.1rem;
+    color: var(--color);
 }
 
 .searchText {
-    margin-top: 5px;
-    color: #101010;
+    color: var(--color);
+    max-width: 290px;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 14px;
+    text-transform: uppercase;
+    font-weight: bold;
 }
 
-.selectYear::-ms-expand {
-    display: none;
-}
-
-select:focus {
-    outline: none;
-}
-
-.selectYear option {
-    background-color: #2c2c2c;
-    color: #fff;
-}
-
-/* Movie theater select arrow */
-.selectYear:after {
-    content: "";
-    position: absolute;
-    top: 50%;
-    right: 10px;
-    width: 0;
-    height: 0;
-    border-left: 8px solid transparent;
-    border-right: 8px solid transparent;
-    border-top: 8px solid #fff;
-    transform: translateY(-50%);
-}
-
-.selectIcon {
-    position: absolute;
-    top: 50%;
-    right: 4%;
-    z-index: 10;
-    opacity: 0;
-    pointer-events: none;
+.loadingMoviesListYear {
+    text-transform: uppercase;
+    color: var(--color);
+    margin-left: auto;
+    margin-right: auto;
+    width: 200px;
+    font-size: 21px;
 }
