--- a/src/pages/MovieDetalisPage/MovieDetalis.module.css
+++ b/src/pages/MovieDetalisPage/MovieDetalis.module.css
@@ -136,7 +136,7 @@
 }
 
 .detalisImg {
-    width: 300px;
+    max-width: 100%;
     height: 100%;
     object-fit: cover;
     transition: all 0.4s;
@@ -159,7 +159,8 @@
 .reviewList {
     display: flex;
     align-items: center;
-    column-gap: 50px;
+    flex-wrap: wrap;
+    gap: 30px;
     margin-bottom: 20px;
     margin-top: 20px;
 }
