--- a/src/components/ButtonBack/ButtonBack.module.css
+++ b/src/components/ButtonBack/ButtonBack.module.css
@@ -7,7 +7,7 @@
     width: 200px;
     height: 50px;
     background: var(--background-header);
-    color: rgb(144, 140, 140);
+    color: var(--color);
     -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
     -ms-border-radius: 10px;
