--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -18,6 +18,11 @@
     gap: 5px;
 }
 
+.navContainer {
+    display: flex;
+    gap: 20px;
+}
+
 .logo {
     display: flex;
     align-items: center;
