--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -21,6 +21,9 @@
 .navContainer {
     display: flex;
     gap: 20px;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
 }
 
 .logo {
