--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -16,6 +16,8 @@
     justify-content: center;
     align-items: center;
     gap: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 .navContainer {
