--- a/src/pages/MovieDetalisPage/MovieDetalis.module.css
+++ b/src/pages/MovieDetalisPage/MovieDetalis.module.css
@@ -1,37 +1,40 @@
 .cast,
 .review {
     font-size: 30px;
-    color: gold;
+    color: var(--color);
     transition: color 0.4s;
     -webkit-transition: color 0.4s;
     -moz-transition: color 0.4s;
     -ms-transition: color 0.4s;
     -o-transition: color 0.4s;
+    text-decoration: underline;
 }
 
 .cast:hover,
 .review:hover {
-    color: orange;
+    color: var(--hover-color-text);
 }
 
 .videoModal {
     position: absolute;
     top: 50%;
     left: 50%;
-    height: 500px;
-    width: 1100px;
+    width: 90%;
     transform: translate(-50%, -50%);
     background-color: rgba(255, 255, 255, 0.57);
     border-radius: 3px;
     box-shadow: 0 0 5px 5px rgba(201, 162, 45, 0.7),
         inset 0 0 30px 10px rgba(201, 162, 45, 0.7);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 iframe {
     /* position: relative; */
-    /* z-index: 3; */
-    width: 100%;
-    height: 100%;
+    z-index: 3;
+    max-width: 100%;
+    min-height: 500px;
 }
 
 .iconBackModal {
@@ -40,7 +43,10 @@ iframe {
     fill: orange;
     width: 100px;
     height: 50px;
-    top: 1%;
-    left: 1%;
+    top: 20%;
+    left: 50%;
+    z-index: 200;
     cursor: pointer;
+    width: 30px;
+
 }
