added functional for select language and save language in local storage also addet useContext for language functional

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -28,6 +28,12 @@
     align-items: center;
 }
 
+.WrapperLangAndTheme {
+    display: flex;
+    align-items: baseline;
+    gap: 10px;
+}
+
 .logo {
     display: flex;
     align-items: center;
