--- a/src/pages/MovieDetalisPage/MovieDetalis.module.css
+++ b/src/pages/MovieDetalisPage/MovieDetalis.module.css
@@ -40,11 +40,9 @@ iframe {
 .iconBackModal {
     position: absolute;
     display: flex;
-    fill: orange;
-    width: 100px;
-    height: 50px;
-    top: 20%;
-    left: 50%;
+    fill: var(--color);
+    top: 20px;
+    left: 20px;
     z-index: 200;
     cursor: pointer;
     width: 30px;
